# Mixed-Precision-Inference-on-GPUs

./: CODE_EXPLANATION.md  README.md  biome.json  index.html  package.json  project.md  project.txt  tsconfig.json  vite.config.ts
parallel_log/2026-02-27_21-19-57_128/: metrics.csv
parallel_log/2026-02-27_21-21-57_256/: metrics.csv
parallel_log/2026-02-27_21-24-00_512/: metrics.csv
parallel_log/2026-02-27_21-25-53_1024/: metrics.csv
presentation/: presentation.aux  presentation.fdb_latexmk  presentation.fls  presentation.nav  presentation.out  presentation.tex  presentation.toc
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/parallel_log/2026-02-27_21-15-10_128/: metrics.csv
src-tauri/src/: kernel.rs  lib.rs  logger.rs  main.rs  types.rs
src/component/: chart.tsx
